--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/wbs0626.github.io/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github Pages 적용!!</title>
+    <title>Github Pages 적용1</title>
       <!-- Start Single Page Apps for GitHub Pages -->
       <script type="text/javascript">
           // Single Page Apps for GitHub Pages
